test/expr6.l1.out
4
error: invalid right-hand pointer operand to -
	#0                   entry	(expr6.l1:9)
